# markitdown-rag-sample

./: .gitignore  README.md  mypy.ini  pyproject.toml
docs/references/: markitdown.txt
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: app.py
src/core/: document_processor.py  rag.py
src/db/: vector_store.py
tests/: test_document_processor.py  test_rag.py  test_vector_store.py
